# EnvDatSci

./: .gitignore  CoordinateReferenceSystemMANCINI.ipynb  Copy_of_FeatureDependence.ipynb  Copy_of_ObservationDependence.ipynb  Copy_of_Python101.ipynb  Copy_of_RasterData101.ipynb  Copy_of_VectorData101_corrected.ipynb  FeatureDependenceMANCINI.ipynb  LICENSE  ObservationDependenceMANCINI.ipynb  PAGU24.ipynb  RAGU24.ipynb  README.md  RasterData101.ipynb  RasterData101_ipynb.ipynb  RasterData101_saved.ipynb  Research.ipynb  VectorData101_corrected_fixed.ipynb  VectorData101_solutions.ipynb  chapter_5_classification.ipynb  featuredependence.ipynb  log_from_commit.txt  observationdependence.ipynb  pyproject.toml  regression101.ipynb  regression101Mancini.ipynb
ClassData/: USGS_04240105_SYRACUSE_NY.csv
CodeSprings/: FeatureDependence.ipynb
CodeSprintSolutions/: FeatureDependence_solution.ipynb  VectorData101_solutions.ipynb
CodeSprints/: =2.4.0  AutomaticDataDownloads.ipynb  AutomaticDataDownloads_Solution.ipynb  CoordinateReferenceSystem.ipynb  FeatureDependence.ipynb  FeatureDependence_example.ipynb  ObservationDependence.ipynb  Python101.ipynb  Python101_solutions.ipynb  RasterData101.ipynb  Regression101.ipynb  Regression101_solutions.ipynb  VectorData101.ipynb  VectorData101_corrected.ipynb  VectorData101_corrected_fixed.ipynb  VectorData101_solutions.ipynb  ode_to_git.txt  ode_to_git_Taposh.txt  regression101.ipynb
finished_py_script/: ObservationDependence.ipynb  RasterData101.ipynb  VectorData101.ipynb  automaticdatadownloads.ipynb  featuredependence.ipynb  (+4 more)
(+1 files in other folders)
