[project]
name =  "EAR609"
authors = [
    {name = "Zanchenling Wang", email = "zwang505@syr.edu"},
]
description = "EAR 609 Environmental Data Science Homework"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Private :: Do Not Upload",
]
requires-python = "==3.8.20"
dynamic = ["version"]
dependencies = [
    "ipykernel==6.29.5",
    "numpy==1.24.4",
    "pandas==2.0.3",
]